syntax = "proto3";

package playlist;

service PlaylistService {
    rpc CreatePlaylist(CreatePlaylistRequest) returns (PlaylistResponse);
}

message CreatePlaylistRequest {
    string name = 1;
}

message PlaylistResponse {
    string id = 1;
    string name = 2;
    repeated Video videos = 3;
}

message Video {
    string id = 1;
    string title = 2;
    string url = 3;
    int32 duration = 4;
}